# FightLens

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: default.yaml
scripts/: app.py  inspect_frames.py
src/fightlens/: __main__.py  atomic.py  config.py  describe.py  embed.py  embeddings.py  errorlog.py  gemini.py  rerank.py  search.py  video.py
tests/: test_describe.py  test_embeddings.py  test_gemini_timeout.py  test_rerank.py  test_video.py
