[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fightlens"
version = "0.1.0"
description = "Semantic search for combat sports videos"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "google-genai",
    "numpy",
    "opencv-python",
    "python-dotenv",
    "pyyaml",
    "sentence-transformers",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"